Fix for the accessibility contrast issue on `btn btn-info` element #Hacktoberfest (#74)

--- a/src/JsonValidate/wwwroot/css/site.css
+++ b/src/JsonValidate/wwwroot/css/site.css
@@ -89,3 +89,12 @@
 .loading .box img {
   width: 20vh;
 }
+
+ /* Accessibility fixes
+  -------------------------------------------------- */
+
+/* Contrast */
+.btn-info {
+  background-color: hsl(188,78%,32.5%);
+  border-color: hsl(188,78%,32.5%);
+}
